Phase J1/J2: rename the product-named REST and routing vocabulary in core
Two renames, no behavior change. Both types were fork-introduced core
API named after one specific product, which is exactly the coupling
this plan exists to remove.

J1: RestHandler.ServerlessScope -> ApiAvailabilityScope, and
RestHandler#serverlessScope() -> #apiAvailabilityScope(). 75 files.

The mechanism was already correct and is untouched: the declaration
belongs next to the handler it describes, and enforcement is already
fully plugin-owned via the upstream ActionPlugin#getRestHandlerWrapper
hook. Three alternatives were weighed. (a) Straight rename -- chosen.
(b) Add-new-and-deprecate -- rejected: it would keep the product name
in core indefinitely to protect compatibility that cannot exist, since
this type is absent from upstream main entirely (verified: `git show
main:...RestHandler.java` has zero occurrences), so nothing built
against upstream OpenSearch can be overriding it. (c) Delete from core
and have the plugin keep an allowlist -- rejected for the reason the
method's own javadoc already gives: it would force a plugin to maintain
an external list of route names that drifts every time a handler is
added, and it inverts the dependency so core adding a handler silently
makes it unavailable.

Two corrections to my own earlier reading, both caught before acting:

- I had called INTERNAL_ONLY dead API surface to drop during the
  rename. It is not dead. That claim came from grepping
  "ServerlessScope.INTERNAL", which matches INTERNAL_ONLY as a prefix
  and reported one hit. It is genuinely exercised by the plugin's
  ServerlessRestGateTests, which asserts the gate refuses an
  INTERNAL_ONLY handler. All three constants kept.

- @PublicApi(since = "3.0.0") on the enum was factually wrong: the type
  does not exist in upstream at any version. Corrected to 3.8.0, the
  fork's actual version, which is accurate for the new type name.

J2: ServerlessAffinityRouting -> CoordinatorAffinity