@@ -15,12 +15,12 @@ import org.opensearch.test.OpenSearchTestCase;
 import java.util.Collections;
 import java.util.List;
 
-public class ServerlessAffinityRoutingTests extends OpenSearchTestCase {
+public class CoordinatorAffinityRoutingTests extends OpenSearchTestCase {
 
     public void testGetAffinityNodeIdDeterministic() {
         List<String> nodeIds = List.of("node-a", "node-b", "node-c");
-        String affinity1 = ServerlessAffinityRouting.getAffinityNodeId("test-index-1", nodeIds);
-        String affinity2 = ServerlessAffinityRouting.getAffinityNodeId("test-index-1", nodeIds);
+        String affinity1 = CoordinatorAffinityRouting.getAffinityNodeId("test-index-1", nodeIds);
+        String affinity2 = CoordinatorAffinityRouting.getAffinityNodeId("test-index-1", nodeIds);
         assertNotNull(affinity1);
         assertEquals(affinity1, affinity2);
     }
@@ -28,16 +28,16 @@ public class ServerlessAffinityRoutingTests extends OpenSearchTestCase {
     public void testGetAffinityNodeIdOrderIndependentInput() {
         List<String> ordered = List.of("node-a", "node-b", "node-c");
         List<String> reverse = List.of("node-c", "node-b", "node-a");
-        String res1 = ServerlessAffinityRouting.getAffinityNodeId("my-index", ordered);
-        String res2 = ServerlessAffinityRouting.getAffinityNodeId("my-index", reverse);
+        String res1 = CoordinatorAffinityRouting.getAffinityNodeId("my-index", ordered);
+        String res2 = CoordinatorAffinityRouting.getAffinityNodeId("my-index", reverse);
         assertEquals(res1, res2);
     }
 
     public void testGetAffinityNodeIdNullAndEmptyHandling() {
-        assertNull(ServerlessAffinityRouting.getAffinityNodeId(null, List.of("node-1")));
-        assertNull(ServerlessAffinityRouting.getAffinityNodeId("idx", null));
-        assertNull(ServerlessAffinityRouting.getAffinityNodeId("idx", Collections.emptyList()));
-        assertNull(ServerlessAffinityRouting.getAffinityNode(null, (DiscoveryNodes) null));
+        assertNull(CoordinatorAffinityRouting.getAffinityNodeId(null, List.of("node-1")));
+        assertNull(CoordinatorAffinityRouting.getAffinityNodeId("idx", null));
+        assertNull(CoordinatorAffinityRouting.getAffinityNodeId("idx", Collections.emptyList()));
+        assertNull(CoordinatorAffinityRouting.getAffinityNode(null, (DiscoveryNodes) null));
     }
 
     public void testGetAffinityNodeFromDiscoveryNodes() {
@@ -57,7 +57,7 @@ public class ServerlessAffinityRoutingTests extends OpenSearchTestCase {
         );
         DiscoveryNodes nodes = DiscoveryNodes.builder().add(nodeA).add(nodeB).build();
 
-        DiscoveryNode affinityNode = ServerlessAffinityRouting.getAffinityNode("logs-2026-08", nodes);
+        DiscoveryNode affinityNode = CoordinatorAffinityRouting.getAffinityNode("logs-2026-08", nodes);
         assertNotNull(affinityNode);
         assertTrue(affinityNode.equals(nodeA) || affinityNode.equals(nodeB));
     }
